# routes/project/object_info.rb
@@ -5,6 +5,7 @@ class Clover
     "fw" => [:firewalls_dataset, "Firewall:view"],
     "kc" => [:kubernetes_clusters_dataset, "KubernetesCluster:view"],
     "1b" => [:load_balancers_dataset, "LoadBalancer:view"],
+    "m1" => [:machine_images_dataset, "MachineImage:view"],
     "pg" => [:postgres_resources_dataset, "Postgres:view"],
     "ps" => [:private_subnets_dataset, "PrivateSubnet:view"],
     "vm" => [:vms_dataset, "Vm:view"],
